--- a/tourism webpage/main/index.html
+++ b/tourism webpage/main/index.html
@@ -21,12 +21,10 @@
         <h1>welcome to christy tours</h1>
         <h3>the travel and tourism industry its just a  part of industry</h3><br>
         <div class="buttons">
-            <a href="C:\Users\admin\Desktop\tourism webpage\main\next page\tourism\index.html">
-            <button > Explore More</button>
-            </a>
-            <a href="C:\Users\admin\Desktop\tourism webpage\main\forms\forms.html">
-            <button>Subscribe Us</button>
-            </a>
+            <a href="./next page/tourism/index.html"><button > Explore More</button></a>
+            <a href="./forms/forms.html"><button>Subscribe Us</button> </a>
+            
+           
         </div>
     </div>
 </div>
