--- a/tourism webpage/main/forms/forms.html
+++ b/tourism webpage/main/forms/forms.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Form</title>
-    <link rel="stylesheet" href="C:\Users\admin\Desktop\tourism webpage\main\forms\styles.css">
+    <link rel="stylesheet" href="formstyles.css">
 </head>
 <body>
     <div class="login-form">
